test/fail/actor-alias1.mo
//MOC-FLAG --actor-alias foo https://dfinity.org
//MOC-FLAG --actor-alias bar not_an_ic_url
//MOC-FLAG --actor-alias baz canister:baz
